# anchore_engine/services/catalog/api/controllers/default_controller.py
@@ -20,6 +20,17 @@ def status():
 
     return (return_object, httpcode)
 
+def repo_post(regrepo=None, autosubscribe=False, bodycontent={}):
+    try:
+        request_inputs = anchore_engine.services.common.do_request_prep(connexion.request, default_params={'regrepo': regrepo, 'autosubscribe': autosubscribe})
+        with db.session_scope() as session:
+            return_object, httpcode = anchore_engine.services.catalog.catalog_impl.repo(session, request_inputs, bodycontent=bodycontent)
+
+    except Exception as err:
+        httpcode = 500
+        return_object = str(err)
+
+    return (return_object, httpcode)    
 
 # @api.route('/image', methods=['GET', 'POST'])
 def image_get(tag=None, digest=None, imageId=None, registry_lookup=False, history=False):
